shellfirm/src/bin/cmd/snapshots/shellfirm__cmd__config__test_config_cli_command__can_run_challenge-2.snap
---
source: shellfirm/src/bin/cmd/config.rs
expression: config.get_settings_from_file().unwrap().challenge != settings.challenge
snapshot_kind: text
---
true
