shellfirm/src/bin/cmd/snapshots/shellfirm__cmd__config__test_config_cli_command__can_run_challenge.snap
---
source: shellfirm/src/bin/cmd/config.rs
expression: "run_challenge(&config, Some(Challenge::Yes))"
---
Ok(
    CmdExit {
        code: 0,
        message: None,
    },
)
