shellfirm/src/bin/cmd/snapshots/shellfirm__cmd__config__test_config_cli_command__can_run_deny-2.snap
---
source: shellfirm/src/bin/cmd/config.rs
expression: config.get_settings_from_file().unwrap().deny_patterns_ids
snapshot_kind: text
---
[
    "id-1",
    "id-2",
]
