shellfirm/src/bin/cmd/snapshots/shellfirm__cmd__config__test_config_cli_command__can_run_ignore.snap
---
source: shellfirm/src/bin/cmd/config.rs
expression: "run_ignore(&config, &settings,\n    Some(vec![\"id-1\".to_string(), \"id-2\".to_string()]))"
---
Ok(
    CmdExit {
        code: 0,
        message: Some(
            "Ignore list updated (2 patterns).",
        ),
    },
)
