shellfirm/src/bin/cmd/snapshots/shellfirm__cmd__config__test_config_cli_command__can_run_reset-2.snap
---
source: shellfirm/src/bin/cmd/config.rs
expression: config.get_settings_from_file()
snapshot_kind: text
---
Ok(
    Settings {
        challenge: Math,
        enabled_groups: [
            "aws",
            "azure",
            "base",
            "database",
            "docker",
            "fs",
            "gcp",
            "git",
            "heroku",
            "kubernetes",
            "network",
            "terraform",
        ],
        disabled_groups: [],
        ignores_patterns_ids: [],
        deny_patterns_ids: [],
        context: ContextConfig {
            protected_branches: [
                "main",
                "master",
                "production",
                "release/*",
            ],
            production_k8s_patterns: [
                "prod",
                "production",
                "prd",
                "live",
            ],
            production_env_vars: {
                "ENVIRONMENT": "production",
                "NODE_ENV": "production",
                "RAILS_ENV": "production",
            },
            sensitive_paths: [],
            escalation: EscalationConfig {
                elevated: Enter,
                critical: Yes,
            },
        },
        audit_enabled: true,
        blast_radius: true,
        min_severity: None,
        agent: AgentConfig {
            auto_deny_severity: High,
            require_human_approval: false,
        },
        llm: LlmConfig {
            provider: "anthropic",
            model: "claude-sonnet-4-20250514",
            base_url: None,
            timeout_ms: 5000,
            max_tokens: 512,
        },
    },
)
