shellfirm/src/bin/cmd/snapshots/shellfirm__cmd__config__test_config_cli_command__can_run_reset.snap
---
source: shellfirm/src/bin/cmd/config.rs
expression: "run_reset(&config, Some(1))"
snapshot_kind: text
---
CmdExit {
    code: 0,
    message: Some(
        "Shellfirm configuration reset successfully",
    ),
}
