shellfirm/src/bin/cmd/snapshots/shellfirm__cmd__config__test_config_cli_command__can_run_reset_with_error.snap
---
source: shellfirm/src/bin/cmd/config.rs
expression: "run_reset(&config, Some(1))"
---
Ok(
    CmdExit {
        code: 78,
        message: Some(
            "reset settings error message
        ),
    },
)
