shellfirm/src/bin/cmd/snapshots/shellfirm__cmd__config__test_config_cli_command__can_run_update_groups-2.snap
---
source: shellfirm/src/bin/cmd/config.rs
expression: config.get_settings_from_file()
---
Ok(
    Settings {
        challenge: Math,
        includes: [
            "test-1",
        ],
        ignores_patterns_ids: [],
        deny_patterns_ids: [],
        context: ContextConfig {
            protected_branches: [
                "main",
                "master",
                "production",
                "release/*",
            ],
            production_k8s_patterns: [
                "prod",
                "production",
                "prd",
                "live",
            ],
            production_env_vars: {
                "ENVIRONMENT": "production",
                "NODE_ENV": "production",
                "RAILS_ENV": "production",
            },
            sensitive_paths: [],
            escalation: EscalationConfig {
                elevated: Enter,
                critical: Yes,
            },
        },
        audit_enabled: false,
        min_severity: None,
    },
)
