shellfirm/src/bin/cmd/snapshots/shellfirm__cmd__config__test_config_cli_command__can_run_update_groups.snap
---
source: shellfirm/src/bin/cmd/config.rs
expression: "run_update_groups(&config, Some(vec![\"test-1\".to_string()]))"
---
Ok(
    CmdExit {
        code: 0,
        message: None,
    },
)
